# ai-servant

./: .gitignore  README.md  ai-servant-cli.spec  example.bat  example.sh  pyproject.toml  test.bat  test.sh
.github/workflows/: release.yml
example/: __main__.py
src/: __main__.py  claude.py  cli.py  config.py  prompt.py  prompt_markdown.py
tests/: test_smoke.py
tools/: bundle_release.py  ci_pack_ubuntu16.sh  ci_pack_windows.bat  pack.bat  pack.sh  run_frozen_example.bat  run_frozen_example.sh
