[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-servant"
version = "0.0.0"
description = "AI Servant 本地工具"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["cli"]

[tool.pytest.ini_options]
pythonpath = ["src"]
