[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-servant"
version = "0.0.0"
description = "AI Servant 本地工具"
requires-python = ">=3.10"
dependencies = [
    "python-library-configlib>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["claude", "cli", "config", "prompt", "prompt_markdown"]

[project.scripts]
ai-servant = "cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
